--- a/feeds/index.html
+++ b/feeds/index.html
@@ -182,7 +182,7 @@
       
       <div class="nav-desktop">
         <a href="../noticias/" class="nav-link">
-          Noticias
+          Ultimas Noticias
         </a>
         <a href="../guia.html" class="nav-link">
           Guía Segura
