--- a/feeds/index.html
+++ b/feeds/index.html
@@ -202,7 +202,7 @@
     
     <div class="nav-mobile" id="nav-mobile">
       <a href="../noticias/" class="nav-link">
-        Noticias
+        Ultimas Noticias
       </a>
       <a href="../guia.html" class="nav-link">
         Guía Segura
