--- a/feeds/index.html
+++ b/feeds/index.html
@@ -220,7 +220,7 @@
     <div class="feeds-container">
       <!-- Hero Section -->
       <section class="feeds-hero">
-        <h1 class="feeds-title">Feeds por Categoría</h1>
+        <h1 class="feeds-title">Noticias por Categoría</h1>
         <p class="feeds-subtitle">
           Noticias organizadas por temas específicos para un seguimiento más preciso
         </p>
