--- a/feeds/index.html
+++ b/feeds/index.html
@@ -297,7 +297,7 @@
         </div>
       </section>
 
-      <!-- RSS Feeds Section -->
+      <!-- RSS Feeds Section 
       <section style="background: var(--bg-secondary); border: 1px solid var(--border-primary); border-radius: var(--radius-lg); padding: 2.5rem; margin: 3rem 0; text-align: center;">
         <h2 style="font-family: var(--font-display); font-size: 1.75rem; font-weight: 700; margin-bottom: 1.5rem; color: var(--text-primary);">
           Feeds RSS Disponibles
@@ -323,7 +323,7 @@
       </section>
     </div>
   </main>
-
+-->
   <!-- Footer -->
   <footer>
     <div class="footer-content">
