--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
     
     <div class="nav-mobile" id="nav-mobile">
       <a href="noticias/" class="nav-link">
-        Noticias
+        Ultimas Noticias
       </a>
       <a href="feeds/" class="nav-link">
-        Feeds
+        Categorias
       </a>
-      <a href="#soberania" class="nav-link">
-        Soberanía
-      </a>
-      <a href="#donaciones" class="nav-link">
-        Donaciones
-      </a>
+      <a href="guia.html" class="nav-link">
+          Guía Segura
+        </a>
+        <a href="mirrors.html" class="nav-link">
+          Mirrors
+        </a>
       <a href="contacto.html" class="nav-cta">
-        Redacción
+        Contacto
       </a>
     </div>
   </nav>
