--- a/feeds/internacional-geopolitica/index.html
+++ b/feeds/internacional-geopolitica/index.html
@@ -17,8 +17,8 @@
       </a>
       
       <div class="nav-desktop">
-        <a href="../../noticias/" class="nav-link">Noticias</a>
-        <a href="../" class="nav-link">Feeds</a>
+        <a href="../../noticias/" class="nav-link">Ultimas Noticias</a>
+        <a href="../" class="nav-link">Categorias</a>
         <a href="../../guia.html" class="nav-link">Guía Segura</a>
         <a href="../../contacto.html" class="nav-cta">Contacto</a>
       </div>
@@ -29,8 +29,8 @@
     </div>
     
     <div class="nav-mobile" id="nav-mobile">
-      <a href="../../noticias/" class="nav-link">Noticias</a>
-      <a href="../" class="nav-link">Feeds</a>
+      <a href="../../noticias/" class="nav-link">Ultimas Noticias</a>
+      <a href="../" class="nav-link">categorias</a>
       <a href="../../guia.html" class="nav-link">Guía Segura</a>
       <a href="../../contacto.html" class="nav-cta">Contacto</a>
     </div>
