--- a/feeds/internacional-geopolitica/index.html
+++ b/feeds/internacional-geopolitica/index.html
@@ -40,9 +40,8 @@
     <div style="max-width: 1200px; margin: 0 auto; padding: 2rem;">
       <!-- Header -->
       <div style="text-align: center; margin-bottom: 3rem; padding: 2rem; background: var(--bg-card); border-radius: var(--radius-lg); border: 1px solid var(--border-primary);">
-        <span style="font-size: 3rem; display: block; margin-bottom: 1rem;">🌍</span>
         <h1 style="font-family: var(--font-display); font-size: 2.5rem; font-weight: 700; margin-bottom: 1rem; color: var(--text-primary);">
-          Internacional y Geopolítica
+          Internacional y Geopolítica 🌍
         </h1>
         <p style="color: var(--text-secondary); font-size: 1.125rem;">
           Análisis de relaciones internacionales, influencia extranjera y posición de México en el mundo
