--- a/feeds/corrupcion-justicia/index.html
+++ b/feeds/corrupcion-justicia/index.html
@@ -40,19 +40,11 @@
     <div style="max-width: 1200px; margin: 0 auto; padding: 2rem;">
       <!-- Header -->
       <div style="text-align: center; margin-bottom: 3rem; padding: 2rem; background: var(--bg-card); border-radius: var(--radius-lg); border: 1px solid var(--border-primary);">
-        <span style="font-size: 3rem; display: block; margin-bottom: 1rem;">⚖️</span>
         <h1 style="font-family: var(--font-display); font-size: 2.5rem; font-weight: 700; margin-bottom: 1rem; color: var(--text-primary);">
-          Corrupción y Justicia
+          Corrupción y Justicia ⚖️
         </h1>
-        <p style="color: var(--text-secondary); font-size: 1.125rem;">
-          Investigaciones sobre corrupción, abuso de poder y funcionamiento del sistema de justicia
-        </p>
-        <!-- 
-        <a href="feed.xml" style="display: inline-flex; align-items: center; gap: 0.5rem; margin-top: 1rem; padding: 0.75rem 1.5rem; background: #ff9500; color: white; text-decoration: none; border-radius: var(--radius-md); font-weight: 600;">
-          📡 Suscribirse al Feed RSS
-        </a>
+
       </div>
--->
       <!-- News Grid -->
       <div id="corrupcion-news-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 2rem;">
         <!-- Las noticias de corrupción y justicia se cargarán automáticamente aquí -->
