--- a/noticias/index.html
+++ b/noticias/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Investigaciones · Corvus MexiLeaks</title>
   <meta name="description" content="Todas las investigaciones y filtraciones verificadas de Corvus MexiLeaks. Periodismo de investigación independiente.">
-  <link rel="stylesheet" href="../assets/style.css">
+  <link rel="stylesheet" href="../../assets/style.css">
   <script src="../js/news-data.js"></script>
   <style>
     .news-container {
