--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
         </div>
         
         <div class="hero-actions" style="margin-top: 2rem;">
-          <a href="mailto:donaciones@corvusmexileaks.org" class="btn btn-primary">
-            Realizar Donación
-          </a>
+          <a href="donaciones.html" class="btn btn-primary">
+  Realizar Donación
+</a>
           <a href="#transparencia" class="btn btn-secondary">
             Ver Transparencia Financiera
           </a>
