--- a/donaciones.html
+++ b/donaciones.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Donaciones Crypto · Corvus MexiLeaks</title>
+  <title>Donaciones Crypto · Corvus News</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#111">
   <link rel="stylesheet" href="assets/style.css">
@@ -99,7 +99,7 @@
   <nav class="topbar" id="topbar">
     <div class="topbar-container">
       <a href="index.html" class="topbar-brand">
-        <span class="brand-text">Corvus MexiLeaks</span>
+        <span class="brand-text">Corvus News</span>
       </a>
       
       <div class="nav-desktop">
