--- a/guia.html
+++ b/guia.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Guía de Seguridad para Filtraciones · Corvus MexiLeaks</title>
+  <title>Guía de Seguridad para Filtraciones · Corvus News</title>
   <meta name="description" content="Aprende cómo enviar filtraciones de forma completamente segura y anónima. Guía paso a paso para proteger tu identidad.">
   <link rel="stylesheet" href="assets/style.css">
   <style>
@@ -394,7 +394,7 @@
   <nav class="topbar">
     <div class="topbar-container">
       <a href="index.html" class="topbar-brand">
-        <span class="brand-text">Corvus MexiLeaks</span>
+        <span class="brand-text">Corvus News</span>
       </a>
       
       <div class="nav-desktop">
@@ -456,7 +456,7 @@
       <div class="trust-banner">
         <h2 class="trust-banner-title">Tu Anonimato es Absoluto</h2>
         <p style="color: var(--text-secondary); max-width: 600px; margin: 0 auto;">
-          En Corvus MexiLeaks <strong>nunca</strong> almacenamos datos personales ni revelamos información 
+          En Corvus News <strong>nunca</strong> almacenamos datos personales ni revelamos información 
           de nuestras fuentes. Utilizamos protocolos de seguridad militar y cifrado de extremo a extremo. 
           Tu protección es nuestra prioridad número uno.
         </p>
@@ -572,7 +572,7 @@ gpg --import clave-publica.asc
 # 2) Escribe tu mensaje en un archivo de texto:
 nano mensaje.txt
 
-# 3) Cifra el archivo para Corvus MexiLeaks:
+# 3) Cifra el archivo para Corvus News:
 gpg --encrypt --armor --recipient corvusleaks@protonmail.com mensaje.txt
 
 # Esto generará mensaje.txt.asc que puedes adjuntar en tu correo ProtonMail.
@@ -711,7 +711,7 @@ TBzhM8+KE6yCNGnxLVXdU9tTQvxB8sfuTBzhM8+KE6yCNGnxLVXdU9tTQvxB
     <div class="footer-content">
       <div class="footer-section">
         <h3>
-          Corvus MexiLeaks
+          Corvus News
         </h3>
         <p style="color: var(--text-secondary); margin-bottom: 1rem;">
           Tu seguridad es nuestra prioridad. Protegemos fuentes, exponemos la verdad.
@@ -733,7 +733,7 @@ TBzhM8+KE6yCNGnxLVXdU9tTQvxB8sfuTBzhM8+KE6yCNGnxLVXdU9tTQvxB
     </div>
     
     <div class="footer-bottom">
-      <p>&copy; 2025 Corvus MexiLeaks. Periodismo independiente y seguro.</p>
+      <p>&copy; 2025 Corvus News. Periodismo independiente y seguro.</p>
     </div>
   </footer>
 
