--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#000000">
   <meta name="color-scheme" content="light dark">
-  <title>Corvus MexiLeaks · Periodismo Independiente por la Soberanía de México</title>
-  <meta name="description" content="Corvus MexiLeaks es el medio de periodismo independiente que defiende la soberanía mexicana a través de investigaciones rigurosas y reportajes de alto impacto.">
+  <title>Corvus News · Periodismo Independiente por la Soberanía de México</title>
+  <meta name="description" content="Corvus News es el medio de periodismo independiente que defiende la soberanía mexicana a través de investigaciones rigurosas y reportajes de alto impacto.">
   <link rel="stylesheet" href="assets/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
   <nav class="topbar" id="topbar">
     <div class="topbar-container">
       <a href="index.html" class="topbar-brand">
-        <span class="brand-text">Corvus MexiLeaks</span>
+        <span class="brand-text">Corvus News</span>
       </a>
       
       <div class="nav-desktop">
@@ -114,7 +114,7 @@
       <div class="security-content">
         <h2 class="security-title">Apoya el Periodismo Independiente</h2>
         <p class="security-desc">
-          Corvus MexiLeaks es un medio completamente independiente que no recibe financiamiento 
+          Corvus News es un medio completamente independiente que no recibe financiamiento 
           de gobiernos, partidos políticos o grandes corporaciones. Tu apoyo nos permite mantener 
           nuestra independencia editorial y continuar con nuestras investigaciones que defienden 
           la soberanía nacional.
@@ -272,7 +272,7 @@
     <div class="footer-content">
       <div class="footer-section">
         <h3>
-          Corvus MexiLeaks
+          Corvus News
         </h3>
         <p style="color: var(--text-secondary); margin-bottom: 1rem;">
           Periodismo independiente al servicio de México. Defendemos la soberanía a través de la verdad.
@@ -323,7 +323,7 @@
     </div>
     
     <div class="footer-bottom">
-      <p>&copy; 2025 Corvus MexiLeaks. Periodismo independiente por la soberanía de México.</p>
+      <p>&copy; 2025 Corvus News. Periodismo independiente por la soberanía de México.</p>
       <p>Comprometidos con la verdad, la transparencia y la defensa de nuestra independencia nacional.</p>
     </div>
   </footer>
