--- a/noticias/index.html
+++ b/noticias/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Investigaciones · Corvus MexiLeaks</title>
-  <meta name="description" content="Todas las investigaciones y filtraciones verificadas de Corvus MexiLeaks. Periodismo de investigación independiente.">
+  <title>Investigaciones · Corvus News</title>
+  <meta name="description" content="Todas las investigaciones y filtraciones verificadas de Corvus News. Periodismo de investigación independiente.">
   <link rel="stylesheet" href="../assets/style.css">
   <script src="../js/news-data.js"></script>
   <style>
@@ -349,7 +349,7 @@
   <nav class="topbar">
     <div class="topbar-container">
       <a href="../index.html" class="topbar-brand">
-        <span class="brand-text">Corvus MexiLeaks</span>
+        <span class="brand-text">Corvus News</span>
       </a>
       
       <div class="nav-desktop">
@@ -452,7 +452,7 @@
     <div class="footer-content">
       <div class="footer-section">
         <h3>
-          Corvus MexiLeaks
+          Corvus News
         </h3>
         <p style="color: var(--text-secondary); margin-bottom: 1rem;">
           Investigaciones verificadas que exponen la corrupción y protegen a las fuentes.
@@ -495,7 +495,7 @@
     </div>
     
     <div class="footer-bottom">
-      <p>&copy; 2025 Corvus MexiLeaks. Periodismo independiente.</p>
+      <p>&copy; 2025 Corvus News. Periodismo independiente.</p>
       <p>Noticias verificadas, fuentes protegidas, verdad expuesta.</p>
     </div>
   </footer>
