--- a/feeds/internacional-geopolitica/index.html
+++ b/feeds/internacional-geopolitica/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Internacional y Geopolítica · Corvus MexiLeaks</title>
+  <title>Internacional y Geopolítica · Corvus News</title>
   <meta name="description" content="Análisis de relaciones internacionales, influencia extranjera y posición de México en el mundo.">
   <link rel="stylesheet" href="../../assets/style.css">
   <script src="../../js/news-data.js"></script>
@@ -13,7 +13,7 @@
   <nav class="topbar">
     <div class="topbar-container">
       <a href="../../index.html" class="topbar-brand">
-        <span class="brand-text">Corvus MexiLeaks</span>
+        <span class="brand-text">Corvus News</span>
       </a>
       
       <div class="nav-desktop">
@@ -73,7 +73,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2025 Corvus MexiLeaks. Analizando el mundo desde México.</p>
+      <p>&copy; 2025 Corvus News. Analizando el mundo desde México.</p>
     </div>
   </footer>
 
