--- a/feeds/soberania/2025-001/index.html
+++ b/feeds/soberania/2025-001/index.html
@@ -34,7 +34,7 @@
     <nav class="topbar">
         <div class="topbar-container">
             <a href="../../index.html" class="topbar-brand">
-                <span class="brand-text">Corvus MexiLeaks</span>
+                <span class="brand-text">Corvus News</span>
             </a>
             <div class="nav-desktop">
                 <a href="../../../noticias/index.html" class="nav-link">Ultimas Noticias</a>
