--- a/feeds/crimen-organizado/2025-001/index.html
+++ b/feeds/crimen-organizado/2025-001/index.html
@@ -76,16 +76,13 @@
                 <p class="article-subtitle">
                     Un acuerdo de culpabilidad con la justicia estadounidense libera a Ovidio Guzmán, hijo de “El Chapo”, y abre nuevas interrogantes sobre su futuro y el combate al narcotráfico.
                 </p>
-                <div class="article-image">
-                    <img src="img1.jpg" alt="Ovidio Guzmán saliendo de prisión">
-                </div>
 
                 <div class="article-body">
                     <p>
                         En un giro noticioso que suscita diversas interpretaciones en los ámbitos judicial y político, Ovidio Guzmán López, hijo de Joaquín "El Chapo" Guzmán, fue excarcelado de un centro penitenciario en Chicago, Illinois. Esta liberación se produce como resultado de un convenio de culpabilidad alcanzado con las autoridades estadounidenses, cuyos términos específicos no han sido detallados públicamente en su totalidad.
                     </p>
                     <!-- Primera imagen periodística -->
-                    <img src="img1.jpg" alt="Ilustración Ovidio Guzmán Chicago" class="caricatura-img">
+                    <img src="img1.png" alt="Ilustración Ovidio Guzmán Chicago" class="caricatura-img">
                     <div class="caricatura-caption">Ilustración: Ovidio Guzmán recobra la libertad tras acuerdo legal en EE.UU.</div>
 
                     <p>
@@ -95,7 +92,7 @@
                         La excarcelación de Ovidio Guzmán plantea interrogantes sobre el futuro de su situación legal y su posible papel dentro de la estructura del crimen organizado. Si bien el acuerdo con la justicia estadounidense representa un avance en uno de los procesos legales que enfrenta, no se descarta la posibilidad de que existan otras investigaciones o requerimientos judiciales pendientes.
                     </p>
                     <!-- Segunda imagen periodística -->
-                    <img src="img2.jpg" alt="Debate sobre justicia y narcotráfico" class="caricatura-img">
+                    <img src="img2.png" alt="Debate sobre justicia y narcotráfico" class="caricatura-img">
                     <div class="caricatura-caption">Reacciones divididas: la justicia estadounidense y la lucha contra el narcotráfico.</div>
 
                     <p>
