Optimizar estructura del sitio - Minimalista

--- a/contacto.html
+++ b/contacto.html
@@ -332,11 +332,8 @@
       </a>
       
       <div class="nav-desktop">
-        <a href="noticias/" class="nav-link">
+        <a href="feeds/2025-07-17/" class="nav-link">
           Noticias
-        </a>
-        <a href="feeds/" class="nav-link">
-          Feeds
         </a>
         <a href="guia.html" class="nav-link">
           Guía Segura
@@ -355,11 +352,8 @@
     </div>
     
     <div class="nav-mobile" id="nav-mobile">
-      <a href="noticias/" class="nav-link">
+      <a href="feeds/2025-07-17/" class="nav-link">
         Noticias
-      </a>
-      <a href="feeds/" class="nav-link">
-        Feeds
       </a>
       <a href="guia.html" class="nav-link">
         Guía Segura
@@ -562,8 +556,7 @@
           Noticias
         </h3>
         <ul>
-          <li><a href="noticias/">Todas las Noticias</a></li>
-          <li><a href="feeds/">Feeds por Categoría</a></li>
+          <li><a href="feeds/2025-07-17/">Todas las Noticias</a></li>
           <li><a href="index.html">Inicio</a></li>
         </ul>
       </div>
