--- a/donaciones.html
+++ b/donaciones.html
@@ -103,11 +103,8 @@
       </a>
       
       <div class="nav-desktop">
-        <a href="noticias/" class="nav-link">
-          Ultimas Noticias
-        </a>
-        <a href="feeds/" class="nav-link">
-          Categorias
+        <a href="feeds/2025-07-17/" class="nav-link">
+          Noticias
         </a>
         <a href="guia.html" class="nav-link">
           Guía Segura
@@ -126,11 +123,8 @@
     </div>
     
     <div class="nav-mobile" id="nav-mobile">
-      <a href="noticias/" class="nav-link">
-        Ultimas Noticias
-      </a>
-      <a href="feeds/" class="nav-link">
-        Categorias
+      <a href="feeds/2025-07-17/" class="nav-link">
+        Noticias
       </a>
       <a href="guia.html" class="nav-link">
           Guía Segura
