--- a/feeds/2025-07-17/aranceles-latam.html
+++ b/feeds/2025-07-17/aranceles-latam.html
@@ -37,8 +37,7 @@
                 <span class="brand-text">Corvus News</span>
             </a>
             <div class="nav-desktop">
-                <a href="../../../noticias/index.html" class="nav-link">Ultimas Noticias</a>
-                <a href="../../feeds/index.html" class="nav-link">Categorias</a>
+                <a href="../2025-07-17/" class="nav-link">Noticias</a>
                 <a href="../../../guia.html" class="nav-link">Guía Segura</a>
                 <a href="../../../contacto.html" class="nav-cta">Contacto</a>
             </div>
@@ -47,8 +46,7 @@
             </button>
         </div>
         <div class="nav-mobile" id="nav-mobile">
-            <a href="../../../noticias/index.html" class="nav-link">Ultimas Noticias</a>
-            <a href="../../feeds/index.html" class="nav-link">Categoría</a>
+            <a href="../2025-07-17/" class="nav-link">Noticias</a>
             <a href="../../../guia.html" class="nav-link">Guía Segura</a>
             <a href="../../../contacto.html" class="nav-cta">Contacto</a>
         </div>
