--- a/guia.html
+++ b/guia.html
@@ -398,11 +398,8 @@
       </a>
       
       <div class="nav-desktop">
-        <a href="noticias/" class="nav-link">
+        <a href="feeds/2025-07-17/" class="nav-link">
           Noticias
-        </a>
-        <a href="feeds/" class="nav-link">
-          Feeds
         </a>
         <a href="guia.html" class="nav-link">
           Guía Segura
@@ -421,12 +418,9 @@
     </div>
     
     <div class="nav-mobile" id="nav-mobile">
-      <a href="noticias/" class="nav-link">
+      <a href="feeds/2025-07-17/" class="nav-link">
         Noticias
-      </a>
-      <a href="feeds/" class="nav-link">
-        Feeds
-      </a>
+        </a>
       <a href="guia.html" class="nav-link">
         Guía Segura
       </a>
@@ -725,8 +719,7 @@ TBzhM8+KE6yCNGnxLVXdU9tTQvxB8sfuTBzhM8+KE6yCNGnxLVXdU9tTQvxB
         </h3>
         <ul>
           <li><a href="mirrors.html">Mirrors Tor</a></li>
-          <li><a href="noticias/">Noticias</a></li>
-          <li><a href="feeds/">Feeds</a></li>
+          <li><a href="feeds/2025-07-17/">Noticias</a></li>
           <li><a href="index.html">Inicio</a></li>
         </ul>
       </div>
