--- a/mirrors.html
+++ b/mirrors.html
@@ -363,11 +363,8 @@
       </a>
       
       <div class="nav-desktop">
-        <a href="noticias/" class="nav-link">
-          Ultimas Noticias
-        </a>
-        <a href="feeds/" class="nav-link">
-          Categorias
+        <a href="feeds/2025-07-17/" class="nav-link">
+          Noticias
         </a>
         <a href="guia.html" class="nav-link">
           Guía Segura
@@ -386,11 +383,8 @@
     </div>
     
     <div class="nav-mobile" id="nav-mobile">
-      <a href="noticias/" class="nav-link">
-        Ultimas Noticias
-      </a>
-      <a href="feeds/" class="nav-link">
-        Categorias
+      <a href="feeds/2025-07-17/" class="nav-link">
+        Noticias
       </a>
       <a href="guia.html" class="nav-link">
         Guía Segura
@@ -679,7 +673,7 @@
         <ul>
           <li><a href="contacto.html">Contacto Seguro</a></li>
           <li><a href="guia.html">Guía de Seguridad</a></li>
-          <li><a href="noticias/">Noticias</a></li>
+          <li><a href="feeds/2025-07-17/">Noticias</a></li>
           <li><a href="index.html">Inicio</a></li>
         </ul>
       </div>
