--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contacto Seguro · Corvus MexiLeaks</title>
+  <title>Contacto Seguro·Corvus News</title>
   <meta name="description" content="Contacta con Corvus MexiLeaks de forma completamente segura y anónima. Múltiples canales de comunicación cifrada.">
   <link rel="stylesheet" href="assets/style.css">
   <style>
@@ -524,7 +524,7 @@
     <div class="footer-content">
       <div class="footer-section">
         <h3>
-          Corvus MexiLeaks
+          Corvus News
         </h3>
         <p style="color: var(--text-secondary); margin-bottom: 1rem;">
           Contacto seguro y anónimo. Tu protección es nuestra prioridad absoluta.
