--- a/contacto.html
+++ b/contacto.html
@@ -332,7 +332,7 @@
       </a>
       
       <div class="nav-desktop">
-        <a href="feeds/2025-07-17/" class="nav-link">
+        <a href="feeds//" class="nav-link">
           Noticias
         </a>
         <a href="guia.html" class="nav-link">
