--- a/contacto.html
+++ b/contacto.html
@@ -352,7 +352,7 @@
     </div>
     
     <div class="nav-mobile" id="nav-mobile">
-      <a href="feeds/2025-07-17/" class="nav-link">
+      <a href="feeds/" class="nav-link">
         Noticias
       </a>
       <a href="guia.html" class="nav-link">
