--- a/contacto.html
+++ b/contacto.html
@@ -558,7 +558,7 @@
           Noticias
         </h3>
         <ul>
-          <li><a href="feeds/2025-07-17/">Todas las Noticias</a></li>
+          <li><a href="feedsS/">Todas las Noticias</a></li>
           <li><a href="index.html">Inicio</a></li>
         </ul>
       </div>
