--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="trust-indicators">
         <div class="trust-card">
           <h3 class="trust-title">Periodismo Riguroso</h3>
-          <p class="trust-desc">Cada investigación pasa por múltiples verificaciones y análisis de expertos</p>
+          <p class="trust-desc">Cada Noticia nuestra o filtracion pasa por múltiples verificaciones y análisis de expertos</p>
         </div>
         <div class="trust-card">
           <h3 class="trust-title">Independencia Total</h3>
