--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
           <h3 style="color: var(--text-primary); margin-bottom: 1rem; font-size: 1.25rem;">Formas de Apoyo:</h3>
           <ul style="color: var(--text-secondary); line-height: 1.8; margin-left: 1.5rem;">
             <li><strong>Donación única:</strong> Contribuye con la cantidad que desees</li>
-            <li><strong>Suscripción mensual:</strong> Apoya de forma recurrente nuestro trabajo</li>
-            <li><strong>Patrocinio de investigación:</strong> Financia investigaciones específicas</li>
+            <li><strong>Patrocinio de investigación:</strong> <a href="contacto.html" >Contactanos </a> para financiaf investigaciones específicas</li>
             <li><strong>Difusión:</strong> Comparte nuestro contenido en redes sociales</li>
           </ul>
         </div>
@@ -141,9 +140,7 @@
           <a href="donaciones.html" class="btn btn-primary">
   Realizar Donación
 </a>
-          <a href="#transparencia" class="btn btn-secondary">
-            Ver Transparencia Financiera
-          </a>
+          
         </div>
         
         <p style="color: var(--text-muted); font-size: 0.875rem; margin-top: 2rem; max-width: 600px; margin-left: auto; margin-right: auto;">
